tests/fsharp/typecheck/sigs/neg95.bsl

neg94.fs(5,6,5,18): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation