tests/fsharp/typecheck/sigs/neg95.fs

module Test

[<Struct>]
type StructRecord =
    {
        X: float
        Y: StructRecord
    }
